# livrusvirtus

./: README.md
LivrusVirtus/Bancos/: Dados.txt  MySql e dbExpress.txt  Paradox7_Livrus.udl  interbase_livrus.txt  mysql_livrus.txt  postgresql_livrus.txt  sqlbase_livrus.txt  sqlserver_livrus.txt  sybase_livrus.txt  sybase_procedures_livrus.txt
LivrusVirtus/Console/: criatxt.bat
LivrusVirtus/Fluid/: Livrus.cxx  Livrus.fld
LivrusVirtus/Glade/: Makefile.am  config.h  configure.in  plivrus.glade  plivrus.gladep.bak
LivrusVirtus/KDevelop/FOXToolKit/ODBC/livrus/livrus/: CadAssuntos.cpp  CadAutores.h  CadClientes.cpp  CadClientes.h  CadProfissoes.cpp  Cadastros.cpp  ConAssuntos.h  ConAutores.cpp  ConPaises.cpp  ConVendas.cpp  Livrus.cpp  Makefile  Makefile.am  Makefile.in  RotinasGlobais.h  Splash.h  VenderLivros.cpp  resource.h
LivrusVirtus/KDevelop/FOXToolKit/ODBC/livrus/livrus/.deps/: AlterarSenha.P  CadAssuntos.P  CadAutores.P  CadClientes.P  CadEditoras.P  CadEnderecos.P  CadIdiomas.P  CadLivros.P  CadPaises.P  CadProfissoes.P  Cadastros.P  ConAssuntos.P  ConAutores.P  ConClientes.P  ConEditoras.P  ConEnderecos.P  ConIdiomas.P  ConLivros.P  ConPaises.P  ConProfissoes.P  ConVendas.P  Consultas.P  ConsultasSQL.P  Livrus.P  Login.P  Principal.P  RotinasGlobais.P  Sobre.P  Splash.P  VenderLivros.P  resource.P
LivrusVirtus/KDevelop/FOXToolKit/ODBC/livrus/livrus/docs/: Makefile
LivrusVirtus/KDevelop/FOXToolKit/ODBC/livrus/livrus/docs/en/: Makefile
LivrusVirtus/KDevelop/GTK2.0/C/ODBC/livrus/livrus/: AlterarSenha.c  CadAutores.c  CadEnderecos.h  CadLivros.c  CadLivros.h  CadProfissoes.c  Cadastros.c  ConLivros.c  Livrus.c  Makefile  Makefile.am  Makefile.in  RotinasGlobais.c  Sobre.c
LivrusVirtus/KDevelop/GTK2.0/C/ODBC/livrus/livrus/.deps/: AlterarSenha.P  CadAssuntos.P  CadAutores.P  CadClientes.P  CadEditoras.P  CadEnderecos.P  CadIdiomas.P  CadLivros.P  CadPaises.P  CadProfissoes.P  Cadastros.P  ConAssuntos.P  ConAutores.P  ConClientes.P  ConEditoras.P  ConEnderecos.P  ConIdiomas.P  ConLivros.P  ConPaises.P  ConProfissoes.P  ConVendas.P  Consultas.P  ConsultasSQL.P  Livrus.P  Login.P  Principal.P  RotinasGlobais.P  Sobre.P  Splash.P  VenderLivros.P
LivrusVirtus/KDevelop/GTK2.0/C/ODBC/livrus/livrus/docs/: Makefile  Makefile.in
LivrusVirtus/KDevelop/GTK2.0/C/ODBC/livrus/livrus/docs/en/: Makefile
LivrusVirtus/KDevelop/Gnome/plivrusgn/: AUTHORS  Makefile  Makefile.am  Makefile.dist  Makefile.in  aclocal.m4  config.cache  config.h  config.status  configure  configure.in  conftest  libtool  plivrusgn.desktop  plivrusgn.kdevprj
LivrusVirtus/KDevelop/Gnome/plivrusgn/hack-macros/CVS/: Repository
LivrusVirtus/KDevelop/Gnome/plivrusgn/macros/: Makefile  Makefile.in  gnome-macros.dep
LivrusVirtus/KDevelop/Gnome/plivrusgn/macros2/: Makefile.in
LivrusVirtus/KDevelop/Gnome/plivrusgn/pixmaps/: Makefile  Makefile.am  Makefile.in
LivrusVirtus/KDevelop/Gnome/plivrusgn/plivrusgn/: Makefile  Makefile.am  Makefile.in  app.c  app.h  main.c  menus.c  menus.h  plivrusgn
LivrusVirtus/KDevelop/Gnome/plivrusgn/plivrusgn/.deps/: app.P  main.P  menus.P
LivrusVirtus/KDevelop/KDE/plivruskde/plivruskde/: Makefile  Makefile.am  Makefile.in  main.cpp  plivruskde  plivruskde.cpp  plivruskde.desktop  plivruskde.h  plivruskde.moc  plivruskdedoc.cpp  plivruskdedoc.h  plivruskdedoc.moc.cpp  plivruskdeui.rc  plivruskdeview.cpp  plivruskdeview.h  plivruskdeview.moc
LivrusVirtus/KDevelop/KDE/plivruskde/plivruskde/.deps/: main.P  plivruskde.P  plivruskde_meta_unload.P  plivruskdedoc.P  plivruskdedoc.moc.P  plivruskdeview.P
LivrusVirtus/KDevelop/QT/plivrusqt/plivrusqt/: Makefile  Makefile.am  Makefile.in  main.cpp  plivrusqt  plivrusqt.cpp  plivrusqt.h  plivrusqt.moc.cpp  plivrusqtdoc.cpp  plivrusqtdoc.h  plivrusqtdoc.moc.cpp  plivrusqtview.cpp  plivrusqtview.h  plivrusqtview.moc.cpp
LivrusVirtus/KDevelop/QT/plivrusqt/plivrusqt/.deps/: main.P  plivrusqt.P  plivrusqt.moc.P  plivrusqtdoc.P  plivrusqtdoc.moc.P  plivrusqtview.P  plivrusqtview.moc.P
LivrusVirtus/KDevelop/podbc/podbc/: Makefile  Makefile.am  Makefile.in  main.cpp  podbc
LivrusVirtus/KDevelop/podbc/podbc/.deps/: main.P
LivrusVirtus/KDevelop/podbc/podbc/docs/: Makefile  Makefile.in
LivrusVirtus/KDevelop/podbc/podbc/docs/en/: Makefile  Makefile.in
LivrusVirtus/KDevelop/wxWin/ODBC/X11/plivrus/: Consultas.cpp  Makefile  Makefile.am  Makefile.in
LivrusVirtus/KDevelop/wxWin/ODBC/X11/plivrus/.deps/: AlterarSenha.P  CadAssuntos.P  CadAutores.P  CadClientes.P  CadEditoras.P  CadEnderecos.P  CadIdiomas.P  CadLivros.P  CadPaises.P  CadProfissoes.P  Cadastros.P  ConAssuntos.P  ConAutores.P  ConClientes.P  ConEditoras.P  ConEnderecos.P  ConIdiomas.P  ConLivros.P  ConPaises.P  ConProfissoes.P  ConVendas.P  Consultas.P  ConsultasSQL.P  DateCtrl.P  Filha.P  Livrus.P  Login.P  Principal.P  RotinasGlobais.P  Sobre.P  Splash.P  VenderLivros.P
LivrusVirtus/KDevelop/wxWin/ODBC/X11/plivrus/docs/: Makefile
LivrusVirtus/KDevelop/wxWin/ODBC/X11/plivrus/docs/en/: Makefile
LivrusVirtus/KDevelop/wxWin/wxODBC/GTK/plivrusgtk/: AlterarSenha.cpp  CadClientes.cpp  CadClientes.h  CadEnderecos.cpp  CadIdiomas.cpp  CadIdiomas.h  CadLivros.cpp  CadPaises.cpp  ConAutores.h  ConEditoras.h  Consultas.cpp  ConsultasSQL.cpp  Filha.cpp  Livrus.cpp  Login.cpp  Makefile  Makefile.am  Makefile.in  RotinasGlobais.h  Splash.cpp
LivrusVirtus/KDevelop/wxWin/wxODBC/GTK/plivrusgtk/.deps/: AlterarSenha.P  CadAssuntos.P  CadAutores.P  CadClientes.P  CadEditoras.P  CadEnderecos.P  CadIdiomas.P  CadLivros.P  CadPaises.P  CadProfissoes.P  Cadastros.P  ConAssuntos.P  ConAutores.P  ConClientes.P  ConEditoras.P  ConEnderecos.P  ConIdiomas.P  ConLivros.P  ConPaises.P  ConProfissoes.P  ConVendas.P  Consultas.P  ConsultasSQL.P  DateCtrl.P  Filha.P  Livrus.P  Login.P  Principal.P  RotinasGlobais.P  Sobre.P  Splash.P  VenderLivros.P
LivrusVirtus/KDevelop/wxWin/wxODBC/GTK/plivrusgtk/docs/: Makefile
LivrusVirtus/KDevelop/wxWin/wxODBC/GTK/plivrusgtk/docs/en/: Makefile
LivrusVirtus/PowerBuilder9/: Livrus.pbw  livrus.ini  livrus.pbl  livrus.pbt
LivrusVirtus/QT/: Login.ui  (+42 more)
(+4835 files in other folders)
