####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = podbc

## INCLUDES were found outside kdevelop specific part

podbc_SOURCES = main.cpp 
podbc_LDADD   = 


EXTRA_DIST = main.cpp 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
podbc_LDFLAGS = $(all_libraries) 
                                                                                
