####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = plivrusgn-logo.png 

install-data-local:
	$(mkinstalldirs) $(datadir)/
	$(INSTALL_DATA) $(srcdir)/plivrusgn-logo.png $(datadir)/pixmaps

uninstall-local:
	-rm -f $(datadir)/pixmaps

####### kdevelop will overwrite this part!!! (end)############
