####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = livrus

## INCLUDES were found outside kdevelop specific part

livrus_SOURCES = VenderLivros.cpp Splash.cpp Sobre.cpp RotinasGlobais.cpp resource.cpp Principal.cpp Login.cpp Livrus.cpp ConVendas.cpp ConsultasSQL.cpp Consultas.cpp ConProfissoes.cpp ConPaises.cpp ConLivros.cpp ConIdiomas.cpp ConEnderecos.cpp ConEditoras.cpp ConClientes.cpp ConAutores.cpp ConAssuntos.cpp CadProfissoes.cpp CadPaises.cpp CadLivros.cpp CadIdiomas.cpp CadEnderecos.cpp CadEditoras.cpp CadClientes.cpp CadAutores.cpp Cadastros.cpp CadAssuntos.cpp AlterarSenha.cpp 
livrus_LDADD   = 


EXTRA_DIST = AlterarSenha.cpp AlterarSenha.h CadAssuntos.cpp CadAssuntos.h Cadastros.cpp Cadastros.h CadAutores.cpp CadAutores.h CadClientes.cpp CadClientes.h CadEditoras.cpp CadEditoras.h CadEnderecos.cpp CadEnderecos.h CadIdiomas.cpp CadIdiomas.h CadLivros.cpp CadLivros.h CadPaises.cpp CadPaises.h CadProfissoes.cpp CadProfissoes.h ConAssuntos.cpp ConAssuntos.h ConAutores.cpp ConAutores.h ConClientes.cpp ConClientes.h ConEditoras.cpp ConEditoras.h ConEnderecos.cpp ConEnderecos.h ConIdiomas.cpp ConIdiomas.h ConLivros.cpp ConLivros.h ConPaises.cpp ConPaises.h ConProfissoes.cpp ConProfissoes.h Consultas.cpp Consultas.h ConsultasSQL.cpp ConsultasSQL.h ConVendas.cpp ConVendas.h Livrus.cpp Livrus.h Login.cpp Login.h Principal.cpp Principal.h resource.cpp resource.h RotinasGlobais.cpp RotinasGlobais.h Sobre.cpp Sobre.h Splash.cpp Splash.h VenderLivros.cpp VenderLivros.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
livrus_LDFLAGS = $(all_libraries) 
                                                                                
