####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = plivrus

## INCLUDES were found outside kdevelop specific part

plivrus_SOURCES = VenderLivros.cpp DateCtrl.cpp ConVendas.cpp ConProfissoes.cpp ConPaises.cpp ConLivros.cpp ConIdiomas.cpp ConEnderecos.cpp ConEditoras.cpp ConClientes.cpp ConAutores.cpp CadProfissoes.cpp CadPaises.cpp CadLivros.cpp CadIdiomas.cpp CadEnderecos.cpp CadEditoras.cpp CadClientes.cpp CadAutores.cpp AlterarSenha.cpp Consultas.cpp ConAssuntos.cpp Cadastros.cpp CadAssuntos.cpp Splash.cpp Sobre.cpp RotinasGlobais.cpp Principal.cpp Login.cpp Livrus.cpp Filha.cpp ConsultasSQL.cpp 
plivrus_LDADD   = /home/hfs/wxX11-2.4.2/lib/libwx_x11univ-2.4.so.0.1.1


EXTRA_DIST = ConsultasSQL.cpp ConsultasSQL.h Filha.cpp Filha.h Livrus.cpp Livrus.h Livrus.ico Livrus.rc Login.cpp Login.h Principal.cpp Principal.h resource.h RotinasGlobais.cpp RotinasGlobais.h Sobre.cpp Sobre.h Splash.cpp Splash.h CadAssuntos.cpp CadAssuntos.h Cadastros.cpp Cadastros.h ConAssuntos.cpp ConAssuntos.h Consultas.cpp Consultas.h AlterarSenha.cpp AlterarSenha.h CadAutores.cpp CadAutores.h CadClientes.cpp CadClientes.h CadEditoras.cpp CadEditoras.h CadEnderecos.cpp CadEnderecos.h CadIdiomas.cpp CadIdiomas.h CadLivros.cpp CadLivros.h CadPaises.cpp CadPaises.h CadProfissoes.cpp CadProfissoes.h ConAutores.cpp ConAutores.h ConClientes.cpp ConClientes.h ConEditoras.cpp ConEditoras.h ConEnderecos.cpp ConEnderecos.h ConIdiomas.cpp ConIdiomas.h ConLivros.cpp ConLivros.h ConPaises.cpp ConPaises.h ConProfissoes.cpp ConProfissoes.h ConVendas.cpp ConVendas.h DateCtrl.cpp DateCtrl.h VenderLivros.cpp VenderLivros.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
plivrus_LDFLAGS = $(all_libraries) 
                                                                                
