####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = livrus

## INCLUDES were found outside kdevelop specific part

livrus_SOURCES = VenderLivros.c Splash.c Sobre.c RotinasGlobais.c Principal.c Login.c Livrus.c ConVendas.c ConsultasSQL.c Consultas.c ConProfissoes.c ConPaises.c ConLivros.c ConIdiomas.c ConEnderecos.c ConEditoras.c ConClientes.c ConAutores.c ConAssuntos.c CadProfissoes.c CadPaises.c CadLivros.c CadIdiomas.c CadEnderecos.c CadEditoras.c CadClientes.c CadAutores.c Cadastros.c CadAssuntos.c AlterarSenha.c 
livrus_LDADD   = 


EXTRA_DIST = AlterarSenha.c AlterarSenha.h CadAssuntos.c CadAssuntos.h Cadastros.c Cadastros.h CadAutores.c CadAutores.h CadClientes.c CadClientes.h CadEditoras.c CadEditoras.h CadEnderecos.c CadEnderecos.h CadIdiomas.c CadIdiomas.h CadLivros.c CadLivros.h CadPaises.c CadPaises.h CadProfissoes.c CadProfissoes.h ConAssuntos.c ConAssuntos.h ConAutores.c ConAutores.h ConClientes.c ConClientes.h ConEditoras.c ConEditoras.h ConEnderecos.c ConEnderecos.h config.h ConIdiomas.c ConIdiomas.h ConLivros.c ConLivros.h ConPaises.c ConPaises.h ConProfissoes.c ConProfissoes.h Consultas.c Consultas.h ConsultasSQL.c ConsultasSQL.h ConVendas.c ConVendas.h Livrus.c Livrus.h Login.c Login.h Principal.c Principal.h resource.h RotinasGlobais.c RotinasGlobais.h Sobre.c Sobre.h Splash.c Splash.h VenderLivros.c VenderLivros.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
livrus_LDFLAGS = $(all_libraries) 
                                                                                
